--- a/index.css
+++ b/index.css
@@ -94,9 +94,7 @@ header .link_home{
 
 #section_wrap{
   height: calc(100% - 50px);
-
-  -webkit-transition: -webkit-transform 1000ms;
-          transition: transform 1000ms;
+  transition: transform 1s, font-size 1s;
 }
 
 #section_wrap section{
