--- a/index.css
+++ b/index.css
@@ -15,6 +15,7 @@ h1{
 
 a{
   text-decoration: none;
+  -webkit-user-select: none;
   -ms-user-select: none;
       user-select: none;
 }
@@ -397,7 +398,7 @@ section .page_title{
   }
   
   #basic_info .data p{
-    flex: 1 0 50%;
+    flex: 1 1 50%;
   }
 
   #skill, #activity{
