--- a/index.css
+++ b/index.css
@@ -210,7 +210,7 @@ section .page_title{
 }
 
 #basic_info .data_wrap .data{
-  flex: 1 0 auto;
+  flex: 1 1 auto;
 
   display: flex;
   flex-flow: row wrap;
@@ -248,6 +248,7 @@ section .page_title{
 
 #basic_info .data p{
   flex: 1 1 auto;
+  max-width: 500px;
 
   display: flex;
   flex-flow: row wrap;
@@ -398,7 +399,7 @@ section .page_title{
   }
   
   #basic_info .data p{
-    flex: 1 1 50%;
+    flex: 1 0 50%;
   }
 
   #skill, #activity{
