--- a/index.css
+++ b/index.css
@@ -223,6 +223,7 @@ section .page_title{
 
 #basic_info .data span{
   flex: 0 1 150px;
+  min-width: 150px;
   height: auto;
 
   display: flex;
@@ -396,6 +397,7 @@ section .page_title{
   #basic_info .data span{
     flex: 1 1 30%;
     margin-right: 5px;
+    min-width: auto;
   }
   
   #basic_info .data p{
