--- a/index.css
+++ b/index.css
@@ -191,7 +191,7 @@ section .page_title{
   flex: 0 0 150px;
   max-width: 150px;
 
-  display: flex;
+  display: inline-flex;
   align-items: center;
   margin-right: 15px;
   border: 1px solid rgba(255,255,255,.75);
@@ -201,7 +201,7 @@ section .page_title{
   flex: 1 0 auto;
   align-self: stretch;
   
-  display: flex;
+  display: inline-flex;
   flex-flow: column wrap;
   height: auto;
 
