--- a/index.css
+++ b/index.css
@@ -189,9 +189,9 @@ section .page_title{
 
 #basic_info .icon{
   flex: 0 0 150px;
-  max-width: 150px;
+  width: 150px;
 
-  display: inline-flex;
+  display: flex;
   align-items: center;
   margin-right: 15px;
   border: 1px solid rgba(255,255,255,.75);
@@ -201,7 +201,7 @@ section .page_title{
   flex: 1 0 auto;
   align-self: stretch;
   
-  display: inline-flex;
+  display: flex;
   flex-flow: column wrap;
   height: auto;
 
@@ -215,6 +215,8 @@ section .page_title{
   display: flex;
   flex-flow: row wrap;
   justify-content: flex-start;
+
+  border: 1px solid white;
 }
 
 #basic_info .dob{
