--- a/index.css
+++ b/index.css
@@ -193,7 +193,7 @@ section .page_title{
 }
 
 #basic_info .data_wrap{
-  flex: 0 0 auto;
+  flex: 1 0 auto;
   align-self: stretch;
   
   display: block;
@@ -205,19 +205,20 @@ section .page_title{
 
 #basic_info .data_wrap .data{
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: row nowrap;
   justify-content: flex-start;
+  align-items: stretch;
 
-  height: 50px;
+  min-height: 50px;
 }
 
-#basic_info .dob{
-  padding: 3px 0;
+#basic_info .data_wrap .data.dob{
+  min-height: 44px;
+  margin: 3px 0;
 }
 
 #basic_info .data span{
-  flex: 0 1 150px;
-  height: auto;
+  flex: 0 1 140px;
 
   display: flex;
   flex-flow: row nowrap;
@@ -234,9 +235,6 @@ section .page_title{
 }
 
 #basic_info .dob span{
-  padding: 0.2em 0;
-
-  text-align: center;
   text-transform: none;
 }
 
@@ -248,7 +246,7 @@ section .page_title{
   flex-flow: row wrap;
   justify-content: center;
   align-items: center;
-  padding: 0 5px;
+  padding: 0 10px;
   border: 1px solid rgba(255,255,255,.3);
 }
 
