--- a/index.css
+++ b/index.css
@@ -292,11 +292,10 @@ section .page_title{
   -webkit-box-flex: 0;
       -ms-flex: 0 1 140px;
           flex: 0 1 140px;
+  height: 50px;
 
   display: -webkit-box;
-
   display: -ms-flexbox;
-
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
@@ -319,6 +318,7 @@ section .page_title{
 }
 
 #basic_info .dob span{
+  height: 44px;
   text-transform: none;
 }
 
@@ -547,6 +547,8 @@ section .page_title{
   }
 
   #basic_info .data span{
+    height: auto;
+
     margin: 0;
     padding: 2px 0;
     border-bottom: none;
