--- a/design_ui/flex_cat/index.css
+++ b/design_ui/flex_cat/index.css
@@ -73,7 +73,7 @@ a{
 .flex:after{
   content: '';
   position: relative;
-
+  
   font-size: 10px;
 
   color: darkkhaki;
@@ -87,29 +87,25 @@ a{
   /* head, ear, eye, mouth, whiskers */
   background-image:
     radial-gradient(10em 10em at 50% 100%, 
-      transparent calc(50% - 1px), currentColor calc(50% - 1px), currentColor 50%, transparent 50%),
-    /* ear */
+      transparent, transparent calc(50% - 1px), currentColor calc(50% - 1px), currentColor 50%, transparent 50%),
     radial-gradient(1.75em 4.3em at 94% 106%, 
-      transparent calc(50% - 1px), currentColor calc(50% - 1px), currentColor 50%, transparent 50%),
+      transparent, transparent calc(50% - 1px), currentColor calc(50% - 1px), currentColor 50%, transparent 50%),
     radial-gradient(1.75em 4.3em at 6% 106%, 
-      transparent calc(50% - 1px), currentColor calc(50% - 1px), currentColor 50%, transparent 50%),
-    /* eye */
+      transparent, transparent calc(50% - 1px), currentColor calc(50% - 1px), currentColor 50%, transparent 50%),
     radial-gradient(1em 1em at 50% 50%, currentColor 50%, transparent 50%),
     radial-gradient(1em 1em at 50% 50%, currentColor 50%, transparent 50%),
-    /* mouth */
     radial-gradient(3em 3em at 50% -9%,
-      transparent calc(50% - 1px), currentColor calc(50% - 1px), currentColor 50%, transparent 50%),
+      transparent, transparent calc(50% - 1px), currentColor calc(50% - 1px), currentColor 50%, transparent 50%),
     radial-gradient(3em 3em at 50% -9%,
-      transparent calc(50% - 1px), currentColor calc(50% - 1px), currentColor 50%, transparent 50%),
-    /* whiskers */
+      transparent, transparent calc(50% - 1px), currentColor calc(50% - 1px), currentColor 50%, transparent 50%),
     radial-gradient(4em 2em at 90% 110%,
-      transparent calc(50% - 1px), currentColor calc(50% - 1px), currentColor 50%, transparent 50%),
+      transparent, transparent calc(50% - 1px), currentColor calc(50% - 1px), currentColor 50%, transparent 50%),
     radial-gradient(4em 2em at 90% 110%,
-      transparent calc(50% - 1px), currentColor calc(50% - 1px), currentColor 50%, transparent 50%),
+      transparent, transparent calc(50% - 1px), currentColor calc(50% - 1px), currentColor 50%, transparent 50%),
      radial-gradient(4em 2em at 90% 110%,
-      transparent calc(50% - 1px), currentColor calc(50% - 1px), currentColor 50%, transparent 50%),
+      transparent, transparent calc(50% - 1px), currentColor calc(50% - 1px), currentColor 50%, transparent 50%),
     radial-gradient(4em 2em at 90% 110%,
-      transparent calc(50% - 1px), currentColor calc(50% - 1px), currentColor 50%, transparent 50%);
+      transparent, transparent calc(50% - 1px), currentColor calc(50% - 1px), currentColor 50%, transparent 50%);
   
 
   background-position: 0 0,
