--- a/design_ui/flex_cat/index.css
+++ b/design_ui/flex_cat/index.css
@@ -56,7 +56,7 @@ a{
 
 /* ホバー時 .itemの高さが変化 */
 .flex:hover .item{
-  flex: 1 0 auto;
+  flex: 1 1 1em;
   color: black;
 }
 
@@ -65,7 +65,7 @@ a{
 }
 
 .flex .item:hover{
-  background-color: lemonchiffon;
+  background-color: #FFFACD;
 }
 
 /*　ねこ　*/
