add css user-select

--- a/design_ui/block_cat/index.css
+++ b/design_ui/block_cat/index.css
@@ -46,6 +46,11 @@ a{
   font-size: 1.3em;
   color: transparent;
   text-decoration: none;
+  
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 
   /*　変化をアニメーション　*/
   transition: 1s, color 0.5s;
