--- a/design_ui/block_cat/index.css
+++ b/design_ui/block_cat/index.css
@@ -22,14 +22,13 @@ a{
 
 .block{
   position: relative;
-  top: 10px; left: 100px;
   
   display: block;
   width: 100px; height: auto;
-  min-height: 90%;
+  margin: 10px;
 }
 
-/*　コンテンツ　*/
+/*　content　*/
 .block .item{
   display: flex;
   flex-flow: row wrap;
@@ -52,11 +51,9 @@ a{
   -ms-user-select: none;
   user-select: none;
 
-  /*　変化をアニメーション　*/
   transition: 1s, color 0.5s;
 }
 
-/* ホバー時 .itemの高さが変化 */
 .block:hover .item{
   height: 130px;
   color: black;
@@ -70,7 +67,7 @@ a{
   background-color: #FFFACD;
 }
 
-/*　ねこ　*/
+/*　cat　*/
 .block:before,
 .block:after{
   content: '';
@@ -80,51 +77,64 @@ a{
   font-size: 10px;
   color: forestgreen;
 
-  width: 10em; height: 7em;
+  width: 10em; height: 5.5em;
   background-repeat: no-repeat;
 }
 
 .block:before{
-  /* head, ear, eye, mouth, whiskers */
+  /* head , ear, eye, mouth, whiskers */
   background-image:
-    radial-gradient(9.9em 9.9em at 50% 100%, 
-      transparent 49.5%, currentColor 49.5%, currentColor 50.5%, transparent 50.5%),
-    radial-gradient(1.75em 4.3em at 94% 106%, 
-      transparent 48.5%, currentColor 48.5%, currentColor 51.5%, transparent 51.5%),
-    radial-gradient(1.75em 4.3em at 6% 106%, 
-      transparent 48.5%, currentColor 48.5%, currentColor 51.5%, transparent 51.5%),
+    radial-gradient(10em 10em at 50% 100%, 
+      transparent 49%, currentColor 49%, currentColor 50%, transparent 50%),
+    radial-gradient(1.75em 4.3em at 63% 106%, 
+      transparent 47%, currentColor 47%, currentColor 50%, transparent 50%),
+    radial-gradient(1.75em 4.3em at 37% 106%, 
+      transparent 47%, currentColor 47%, currentColor 50%, transparent 50%),
     radial-gradient(1em 1em at 50% 50%, currentColor 50%, transparent 50%),
     radial-gradient(1em 1em at 50% 50%, currentColor 50%, transparent 50%),
-    radial-gradient(3em 3em at 50% -9%,
-      transparent 48.5%, currentColor 48.5%, currentColor 51.5%, transparent 51.5%),
-    radial-gradient(3em 3em at 50% -9%,
-      transparent 48.5%, currentColor 48.5%, currentColor 51.5%, transparent 51.5%),
-    radial-gradient(4em 2em at 90% 110%,
-      transparent 48.5%, currentColor 48.5%, currentColor 51.5%, transparent 51.5%),
-    radial-gradient(4em 2em at 90% 110%,
-      transparent 48.5%, currentColor 48.5%, currentColor 51.5%, transparent 51.5%),
-     radial-gradient(4em 2em at 90% 110%,
-      transparent 48.5%, currentColor 48.5%, currentColor 51.5%, transparent 51.5%),
-    radial-gradient(4em 2em at 90% 110%,
-      transparent 48.5%, currentColor 48.5%, currentColor 51.5%, transparent 51.5%);
+    radial-gradient(3em 3em at 50% -20%,
+      transparent 47%, currentColor 47%, currentColor 50%, transparent 50%),
+    radial-gradient(3em 3em at 50% -20%,
+      transparent 47%, currentColor 47%, currentColor 50%, transparent 50%),
+    radial-gradient(4em 2em at 40% 135%,
+      transparent 47%, currentColor 47%, currentColor 50%, transparent 50%),
+    radial-gradient(4em 2em at 40% 135%,
+      transparent 47%, currentColor 47%, currentColor 50%, transparent 50%),
+    radial-gradient(4em 2em at 60% 135%,
+      transparent 47%, currentColor 47%, currentColor 50%, transparent 50%),
+    radial-gradient(4em 2em at 60% 135%,
+      transparent 47%, currentColor 47%, currentColor 50%, transparent 50%);
   
 
-  background-position: 0 0,
-    -7.0em -3.6em,  7.0em -3.6em, 
-    -1.5em  1.0em,  1.5em  1.0em,
-    -1.3em  5.7em,  1.3em  5.7em,
-    -7.5em -1.7em, -7.9em -1.0em, 0.2em -1.7em, 0.3em -1.0em;
+   background-position:
+    left 50% bottom 0, 
+    left calc(50% - 3em) bottom 3.5em, left calc(50% + 3em) bottom 3.5em,
+    left calc(50% - 1.5em) bottom 2em, left calc(50% + 1.5em) bottom 2em,
+    left calc(50% - 1.3em) bottom -1.6em, left calc(50% + 1.3em) bottom -1.6em,
+    left calc(50% - 3.5em) bottom 1.8em, left calc(50% - 3.8em) bottom 1em,
+    left calc(50% + 3.6em) bottom 1.8em, left calc(50% + 3.7em) bottom 1.1em;
+
+  background-size: 
+    10em 10em, 
+    1.75em 4.3em, 1.75em 4.3em,
+    1em 1em, 1em 1em,
+    3em 3em, 3em 3em,
+    4em 2em, 4em 2em, 4em 2em, 4em 2em;
 }
 
 .block:after{
   /* body, paw */
   background-image:
-    radial-gradient(9.8em 8.8em at 50% 0%, 
-      transparent 49.5%, currentColor 49.5%, currentColor 50.5%, transparent 50.5%),
-    radial-gradient(4em 10em at 90% -25%, 
-      transparent 49%, currentColor 49%, currentColor 50.5%, transparent 50.5%),
-    radial-gradient(4em 10em at 10% -25%, 
-      transparent 49%, currentColor 49%, currentColor 50.5%, transparent 50.5%);
+    radial-gradient(10em 9em at 50% 0%, 
+      transparent 49%, currentColor 49%, currentColor 50%, transparent 50%),
+    radial-gradient(3.8em 10em at 75% -19%, 
+      transparent 48.5%, currentColor 48.5%, currentColor 50%, transparent 50%),
+    radial-gradient(3.8em 10em at 25% -19%, 
+      transparent 48.5%, currentColor 48.5%, currentColor 50%, transparent 50%);
 
-  background-position: 0 0, -5.2em 1.3em, 5.2em 1.3em;
+  background-position:
+    left 50% top 0,
+    left calc(50% - 2.2em) top 1.6em, left calc(50% + 2.2em) top 1.6em;
+
+  background-size: 10em 9em, 3.8em 10em, 3.8em 10em;
 }
