--- a/design_ui/flex_cat/index.css
+++ b/design_ui/flex_cat/index.css
@@ -22,22 +22,24 @@ a{
 
 .flex{
   position: relative;
-  top: 10px; left: 100px;
 
   display: flex;
   flex-flow: column nowrap;
-
   width: 100px; height: auto;
-  min-height: 90%;
+  margin: 10px;
+
+  min-height: 500px;
+
+  background-color: rgba(200,200,200,.5);
 }
 
-/*　コンテンツ　*/
+/*　content　*/
 .flex .item{
   flex: 0 0 auto;
   width: 100px;
 
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: column nowrap;
   align-items: center;
   justify-content: center;
 
@@ -54,11 +56,10 @@ a{
   -ms-user-select: none;
   user-select: none;
 
-  /*　変化をアニメーション　*/
+  word-break: break-all;
   transition: 1s linear;
 }
 
-/* ホバー時 .itemの高さが変化 */
 .flex:hover .item{
   flex: 1 0 auto;
   color: black;
@@ -72,7 +73,7 @@ a{
   background-color: #FFFACD;
 }
 
-/*　ねこ　*/
+/* cat */
 .flex:before,
 .flex:after{
   content: '';
@@ -82,7 +83,7 @@ a{
   font-size: 10px;
   color: darkkhaki;
 
-  flex: 0 0 7em;
+  flex: 0 0 5.5em;
   width: 10em;
   background-repeat: no-repeat;
 }
@@ -92,31 +93,39 @@ a{
   background-image:
     radial-gradient(10em 10em at 50% 100%, 
       transparent calc(50% - 1px), currentColor calc(50% - 1px), currentColor 50%, transparent 50%),
-    radial-gradient(1.75em 4.3em at 94% 106%, 
+    radial-gradient(1.75em 4.3em at 63% 106%, 
       transparent calc(50% - 1px), currentColor calc(50% - 1px), currentColor 50%, transparent 50%),
-    radial-gradient(1.75em 4.3em at 6% 106%, 
+    radial-gradient(1.75em 4.3em at 37% 106%, 
       transparent calc(50% - 1px), currentColor calc(50% - 1px), currentColor 50%, transparent 50%),
     radial-gradient(1em 1em at 50% 50%, currentColor 50%, transparent 50%),
     radial-gradient(1em 1em at 50% 50%, currentColor 50%, transparent 50%),
-    radial-gradient(3em 3em at 50% -9%,
+    radial-gradient(3em 3em at 50% -20%,
       transparent calc(50% - 1px), currentColor calc(50% - 1px), currentColor 50%, transparent 50%),
-    radial-gradient(3em 3em at 50% -9%,
+    radial-gradient(3em 3em at 50% -20%,
       transparent calc(50% - 1px), currentColor calc(50% - 1px), currentColor 50%, transparent 50%),
-    radial-gradient(4em 2em at 90% 110%,
+    radial-gradient(4em 2em at 40% 135%,
       transparent calc(50% - 1px), currentColor calc(50% - 1px), currentColor 50%, transparent 50%),
-    radial-gradient(4em 2em at 90% 110%,
+    radial-gradient(4em 2em at 40% 135%,
       transparent calc(50% - 1px), currentColor calc(50% - 1px), currentColor 50%, transparent 50%),
-     radial-gradient(4em 2em at 90% 110%,
+    radial-gradient(4em 2em at 60% 135%,
       transparent calc(50% - 1px), currentColor calc(50% - 1px), currentColor 50%, transparent 50%),
-    radial-gradient(4em 2em at 90% 110%,
+    radial-gradient(4em 2em at 60% 135%,
       transparent calc(50% - 1px), currentColor calc(50% - 1px), currentColor 50%, transparent 50%);
   
+  background-position:
+    left 50% bottom 0, 
+    left calc(50% - 3em) bottom 3.5em, left calc(50% + 3em) bottom 3.5em,
+    left calc(50% - 1.5em) bottom 2em, left calc(50% + 1.5em) bottom 2em,
+    left calc(50% - 1.3em) bottom -1.6em, left calc(50% + 1.3em) bottom -1.6em,
+    left calc(50% - 3.5em) bottom 1.8em, left calc(50% - 3.8em) bottom 1em,
+    left calc(50% + 3.6em) bottom 1.8em, left calc(50% + 3.7em) bottom 1.1em;
 
-  background-position: 0 0,
-    -7.0em -3.6em,  7.0em -3.6em, 
-    -1.5em  1.0em,  1.5em  1.0em,
-    -1.3em  5.7em,  1.3em  5.7em,
-    -7.5em -1.7em, -7.9em -1.0em, 0.2em -1.7em, 0.3em -1.0em;
+  background-size: 
+    10em 10em, 
+    1.75em 4.3em, 1.75em 4.3em,
+    1em 1em, 1em 1em,
+    3em 3em, 3em 3em,
+    4em 2em, 4em 2em, 4em 2em, 4em 2em;
 }
 
 .flex:after{
@@ -124,10 +133,14 @@ a{
   background-image:
     radial-gradient(10em 9em at 50% 0%, 
       transparent calc(50% - 1px), currentColor calc(50% - 1px), currentColor 50%, transparent 50%),
-    radial-gradient(4em 10em at 90% -25%, 
+    radial-gradient(3.8em 10em at 75% -19%, 
       transparent calc(50% - 1px), currentColor calc(50% - 1px), currentColor 50%, transparent 50%),
-    radial-gradient(4em 10em at 10% -25%, 
+    radial-gradient(3.8em 10em at 25% -19%, 
       transparent calc(50% - 1px), currentColor calc(50% - 1px), currentColor 50%, transparent 50%);
+  
+  background-position:
+    left 50% top 0,
+    left calc(50% - 2.2em) top 1.6em, left calc(50% + 2.2em) top 1.6em;
 
-  background-position: 0 0, -5.2em 1.4em, 5.2em 1.4em;
+  background-size: 10em 9em, 3.8em 10em, 3.8em 10em;
 }
